- Enhancements to allow local xlinks to work in wfs and fragment harvesters - Modify matadata records api and directory api to accept uuids with . (eg. as may occur if urn specified) and handle forward: in SpringLocalServiceInvoker - Search list view enhancements and fixes: Remove thumbnail from results if not present, fix edit button overflow - Capture title and uuid from optional attributes in templates loaded from schema templates directory - Fix wfs and thredds harvesters to use /api/ urls for retrieving metadata records/fragments - Fix bug: harvester records owner wasn't being saved to the harvester settings - Add Transaction support for operations that need it (seems to have been inadvertently left off?) - Enhancement: Add user information to updateFixedInfo - Enhancement: If an add-directive is specified in config-editor.xml then it should override any choices offered by the schema - NPE protection for schemas that aren't multilingual when getting directory entries in api

--- a/web-ui/src/main/resources/catalog/views/default/less/gn_search_default.less
+++ b/web-ui/src/main/resources/catalog/views/default/less/gn_search_default.less
@@ -137,7 +137,7 @@ ul.gn-resultview {
       a {
         margin-left: 0;
         &.gn-md-edit-btn {
-          width: 12px;
+          //width: 12px;
           margin-left: 10px;
 
         }
